kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-front
  labels:
    app: chat-app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-front
  template:
    metadata:
      labels:
        app: chat-app-front
    spec:
      containers:
      - name: chat-app-front
        image: nginx:stable-alpine3.17
        ports:
        - name: chat-app
          containerPort: 80
        resources:
          limits:
            memory: "64Mi"
        volumeMounts:
        - name: chat-app
          mountPath: /usr/share/nginx/html
        - name: chat-app-nginx-default-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
        - name: chat-app
          persistentVolumeClaim:
            claimName: chat-app-pvc
        - name: chat-app-nginx-default-config
          configMap:
            name: chat-app-nginx-default-config
---
apiVersion: v1
kind: Service
metadata:
  name: chat-app-front
  labels:
    app: chat-app-front
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: chat-app-front
