kubernetes/frontend/ingress.yaml
# I use Traefik to reverse proxy on my k8s
# https://doc.traefik.io/traefik/providers/kubernetes-crd/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressrouterchatappfront
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`your.domain`)
    kind: Rule
    services:
    - name: chat-app-front
      port: 80
  tls:
    certResolver: your-cert-resolver
